--- a/latter.html
+++ b/latter.html
@@ -14,9 +14,62 @@
             display: flex;
             align-items: center;
         }
+
+
+        /* REsponsive website  */
+
+@media(max-width:880px){
+    html{
+        font-size: 90%;
+    }
+}
+
+@media(max-width:720px){
+    html{
+        font-size: 75%;
+    }
+}
+@media(max-width:600px){
+    html{
+        font-size: 60%;
+    }
+}
+
+@media(max-width:480px){
+    html{
+        font-size: 50%;
+    }
+}
+@media(max-width:450px){
+    html{
+        font-size: 45%;
+    }
+}
     </style>
 </head>
 <body>
-    <h1>Lore</h1>
+    <h1> Pallvi man ja please hm kya kare raha hi nhi jata tujhe bina dekhe </h1>
+    <img src="couple-3581038_1280.webp" alt="">
+    <h1>I Love You</h1>
+    <p>Pallavi mai aapse kuch nhi chahta sirf jb time mile to ek do minute bat kr liya  karo . hmse aap ko koi problem nhi hogi
+        aap se hme itna lgav kyo h hm bhi nhi jante
+        aap message ka reply nhi krte ho sayad ye aap ko bhi achcha nhi lgta hoga 
+        agar koi problem ho to btao 
+        agar sari problen mai u to btao mai aapke jindgi se aise chala jaunga jaise kisi hadse me kisi kijaan chali jati <h1>but please batao
+            ye aap ki khamosi hme rulati bahut h 
+            
+            bar bar message krna hme bhi acha nhi lgta 
+            hme bhi apni self respect pyara h but aapko dekhta hu to rok hi nhi pata hu 
+            mera manna hai ki prem me pratiksha  karo chahe puri jindgi nikal jaye 
+            pallavi aaj holi h please bat kr lo na
+             pallavi hme ye samajh nhi aaya hmne glti kya kr di sach hi to bloa tha ki mai prem krta hu aap se
+             aur aapne hme glt samajh liya mere liye prem ki definition alag h aaj ke  jaisa nhi hm aisa koi kam nhi karenge jisse koi ungli uthaye hmpr    
+            Pallavi mujhe kisi ko manane ki aadat nhi h pr mai aap ko jindgi bhar manane ko taiyar hu 
+
+            please call kr do na yar 
+
+            vaise bhi mai ye Holi wishing website aapke liye bna rha hu Using html css javascript
+        </h1>
+    </p>
 </body>
 </html>
