--- a/latter.html
+++ b/latter.html
@@ -39,6 +39,10 @@
     html{
         font-size: 50%;
     }
+    img{
+            width: 50vw;
+            height: 50vh;
+        }
 }
 @media(max-width:450px){
     html{
@@ -50,12 +54,15 @@
 <body>
    <div class="container">
 
-    <h1> Pallvi man ja please hm kya kare raha hi nhi jata tujhe bina dekhe </h1>
+    <h1>दिलों की दूरियाँ मिटाने का मौका है
+        होली के इस त्यौहार में Aap के साथ मस्ती करने का मौका है</h1>
     <img src="couple-3581038_1280.webp" alt="">
    
    <h2 class="multiple-text">You are my everything in my little world </h2>
 
- <h1><a href="index.html">Previous</a></h1>
+   <h2>Happy </h2>
+
+ <h1><a href="index.html">Back</a></h1>
 
 
    </div>
