--- a/latter.html
+++ b/latter.html
@@ -54,13 +54,13 @@
 <body>
    <div class="container">
 
-    <h1>दिलों की दूरियाँ मिटाने का मौका है
-        होली के इस त्यौहार में Aap के साथ मस्ती करने का मौका है</h1>
-    <img src="couple-3581038_1280.webp" alt="">
+    <!-- <h1>दिलों की दूरियाँ मिटाने का मौका है
+        होली के इस त्यौहार में Aap के साथ मस्ती करने का मौका है</h1> -->
+    <!-- <img src="couple-3581038_1280.webp" alt=""> -->
    
-   <h2 class="multiple-text">You are my everything in my little world </h2>
+   <!-- <h2 class="multiple-text">You are my everything in my little world </h2> -->
 
-   <h2>Happy </h2>
+   <h2>Happy Holi </h2>
 
  <h1><a href="index.html">Back</a></h1>
 
