--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="text-container">
         <h1 class="title-text">
-            Happy Holi Dear <span class="multiple-text"></span>
+            <span class="multiple-text"></span>
         </h1>
         <h1><a href="latter.html">Click here</a></h1>
         <h3 class="wish-text">
